spec/invalid/not_id.expr.disassembled
[
    (
        CompileError(
            TypeMismatch {
                expected: Bool,
                actual: Fn(Value) -> Value,
            },
        ),
        5..7,
    ),
]